Changelog
=========

1.1.4 ???
	+ Added ``--debug-info`` command line option (for *FireSass* output).
	+ Added compass helper function ``reject()``.
	+ Added ``undefined`` keyword for undefined variables.
	+ Added function ``index()``.
	+ Fixed ``append()`` and ``join()`` when called with a separator.
	+ Fixed incorrect exception when a file is not found.
	+ Fixed incorrect exceptions when a token is not in the expected number format.
	+ Fix parsing of gradients.
	+ Fix bug in the ``-compass-list()`` function.
	+ Show a better error if no color stops given to ``*-gradient`` functions.
	+ Fix ``compact()`` function removing incorrect values.
	+ Fix ``@if`` conditions.

1.1.3 Jan 9, 2012
	+ Support for the new Sass 3.2.0 features (``@content`` and placeholder selectors)
	+ Fixed bug with line numbers throwing an exception.

1.1.2 Jan 3, 2012
	+ Regression bug fixed from 1.1.1

1.1.1 Jan 2, 2012
	+ Added optional C speedup module for an amazing boost in scanning speed!
	+ Added ``headings``, ``stylesheet-url``, ``font-url``, ``font-files``, ``inline-font-files`` and ``sprite-names``.

1.1.0 - Dec 22, 2011
	+ Added ``min()`` and ``max()`` for lists.
	+ Removed exception raise.

1.0.9 - Dec 22, 2011
	+ Optimizations in the scanner.
	+ Added ``background-noise()`` for compass-recipes support.
	+ ``enumerate()`` and ``range()`` can go backwards. Ex.: ``range(3, 0)`` goes from 3 to 0.
	+ Added line numbers and files for errors.
	+ Added support for *Firebug* with *FireSass*.
	+ ``nth(n)`` is round (returns the ``nth mod len`` item of the list).
	+ ``--watch`` added to the command line.
	+ Several bugs fixed.

1.0.8 - May 13, 2011
    + Changed source color (``$src-color``) default to black.
    + Moved the module filename to ``__init__.py`` and module renamed back to scss.