@@ -14,6 +14,7 @@ Changelog
 	+ Show a better error if no color stops given to ``*-gradient`` functions.
 	+ Fix ``compact()`` function removing incorrect values.
 	+ Fix ``@if`` conditions.
+	+ Fix ``@for`` loop with reversed limits, which should do no iterations.
 
 1.1.3 Jan 9, 2012
 	+ Support for the new Sass 3.2.0 features (``@content`` and placeholder selectors)
